--- a/src/main/webapp/css/qr/qr.css
+++ b/src/main/webapp/css/qr/qr.css
@@ -1,155 +1,420 @@
-html {
-  	width: 100%;
-  	height: 100%;
-  	margin: 0;
-  	padding: 0;
-  	overflow: hidden;  
+body {
+	background: #FFF;
+	height: 100vh;
+	padding: 0;
+	margin: 0;
 }
 
-body {		
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    padding: 0;
-    font-size: 16px;
+.flex-box {
+	top: 0;
+	left: 0;
+	display: flex;
+	align-items: stretch;
+	justify-content: left;
 }
 
-.image {
-	display: block;
-	position: relative;
-	height: 100%;
+.btn {
+	font-size: 16px !important;
+}
+
+a {
+	cursor: pointer;
+	text-decoration: none;
+	-webkit-transition: all 0.2s ease-in-out;
+	-o-transition: all 0.2s ease-in-out;
+	transition: all 0.2s ease-in-out;
+}
+
+input[type="checkbox"]{	
+	transform : scale(1.5);	
+}
+
+.bootstrap-table {
 	width: 100%;
 }
 
-#container {
-	height: 100vh;
-    margin: 0;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-items: stretch;
-    justify-content: flex-start;
-    overflow: hidden;
+.bootstrap-table .pagination-detail {
+	padding-left: 10px;
+	font-weight: 600;
+	font-size: 16px;
+	text-align: left;
 }
 
-#header {
-    height: 56px;
-    flex: 0 0 56px;
+.bootstrap-table .pagination {
+	justify-content: center;
+}
+
+.bootstrap-table .pagination-detail .btn {
+	margin: 0px 5px;
+	font-size: 1.1em;
+}
+
+.bootstrap-table .pagination-detail .dropdown-menu {
+	min-width: 3.5rem !important;
+	text-align: center !important;
+	font-weight: 400;
+}
+
+.content_table_box {
+	margin-bottom: 20px !important;
+}
+
+.fixed-table-toolbar>.columns-right {
+	display: none;
+}
+
+.btn {
+	border: none !important;
+}
+
+.font-bold {
+	font-weight: 600;
+}
+
+.btn-default {
+	background: #4285F4;
+	color: white;
+}
+
+.btn-default:hover, .content_button_box .btn-default:active {
+	background: #0B51C5;
+}
+
+.btn-primary {
+	background: #2BBBAD;
+	color: white;
+}
+
+.btn-primary:hover, .btn-primary:active {
+	background: #186860 !important;
+}
+
+.form-control[disabled], .form-control[readonly], fieldset[disabled] .form-control
+	{
+	cursor: not-allowed;
+	background-color: #eeeeee !important;
+}
+
+.icon-info {
+	color: #333333;
+}
+
+.icon-primary {
+	color: #2BBBAD;
+}
+
+.icon-default {
+	color: #4285F4;
+}
+
+.icon-danger {
+	color: #ff3547;
+}
+
+.flex-row {
+	align-items: center;
+	justify-content: center;
+	flex-wrap: nowrap;
+}
+
+#__top_header {
+	height: 60px;
+	width: 100%;
+	padding: 0px;
+	position: fixed;
+	z-index: 10;
+	top: 0%;
+	border-image: linear-gradient(to right, #2f59a5 0%, #349880 100%);
+	border-image-slice: 1;
+	border-bottom: 4px solid;
+}
+
+#__bottom_box {
+	height: 50px;
+	width: 100%;
+	padding: 0px;
+	position: fixed;
+	z-index: 10;
+	bottom: 0%;
+    background: #162136;
+	flex-direction: row-reverse;
+}
+
+#lg-top-header {
+	height: 100%;
+	width: 100%;
+	background: white;
+	justify-content: space-between;
+	background: #162136;
+}
+
+#lg-top-menu-seal-logo {
+    height: 100%;
+    padding-left: 10px;
+    display: flex;
+    align-items: center;
+}
+
+#lg-title {
+	display: flex;
+    flex-direction: row-reverse;
+    width: 100%;
+    height: 100%;
+    color: white;
+    align-items: center;
+    padding-right: 10px;
+    font-size: 20px;
+}
+
+#sm-top-header {
+    height: 100%;
     width: 100%;
     background: #162136;
     display: flex;
     justify-content: space-between;
-    flex-wrap: nowrap;
-    flex-direction: row;
     align-items: center;
+    flex-wrap: nowrap;
 }
 
-#footer {
-    width: 100%;
-    height: 54px;
-    flex: 0 0 54px;
+#sm-top-menu-seal-logo {
+    height: 100%;
     display: flex;
     align-items: center;
-    justify-content: flex-end;
-    flex-wrap: nowrap;
-    background: yellow;
-    position: fixed;
-    bottom: 0;
+    padding-left: 10px;
 }
 
-
-/*** -------- ***/
-/* HEADER START */
-/*** ------- ****/
-
-
-#header > div {	
+#sm-title {
 	display: flex;
-    height: 100%;
-    align-items: center;
-}
-
-#header > .seal-logo-box {
-	flex: 0 0 30%;
-    padding: 1%;
-}
-
-#header > .seal-logo-box > img{
-    width: 100%;
-    max-width: 300px;
-    min-width: 200px;
-}
-
-#header .title {
-	display: flex;
-    justify-content: flex-end;
-    font-size: 20px;
-    color: #dbddf6;
-    flex-direction: row;
-    align-items: center;
-    padding: 1%;
-}
-
-#title_left {
-    flex: 0 0 50%;
-}
-
-#title_left>.client_text {
-	font-weight: bold;
-	font-size: 16px;
-	color: white;
-	padding: 2%
-}
-
-#title_left>.site_text {
-	font-size: 1vw;
-	color: #dbddf6;
-}
-
-#title_left>.system_text {
-	color: #B4B6D5;
-	padding: 1%;
-	font-size: 1.2vw;
-}
-
-#main_frame {
+    flex-direction: row-reverse;
     width: 100%;
     height: 100%;
-    background: #FFF;
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    align-items: stretch;
-    justify-content: space-around;
-    padding: 2%;
-    display: none;
+    color: white;
+    align-items: center;
+    padding-right: 10px;
+    font-size: 16px;
 }
 
-#main_frame > div {
-	width: 100%;	
+
+#__cotent_box {
+	height: 100%;
+	width: 100%;
+	padding: 0px;
+	position: fixed;
+	z-index: 10;
+	top: 60px;
+	background: yellow;
 }
 
-#main_frame .case-wrap {
-	height: 7%;
+#lg-content-box {
+	height: 100%;
+	width: 100%;
+	background: #F1F3FA;
+	padding-bottom: 50px;
 }
 
-#main_frame #contentWarp {
-	background: #FFF;
-    padding: 2vh;    
+#main_content {
+	height: 100%;
+	width: 100%;
 	overflow: auto;
 }
 
-#main_frame #contentWarp .page-wrap {
+#content-wrapper {
+    width: 100%;
+    padding: 10px;
+    overflow: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+    align-content: center;
+    padding-bottom: 120px;
+}
+
+#content-wrapper #contentPage {
+	display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+	min-height: 600px;	
+}
+
+#content-wrapper #contentPage .page-wrap {
+    max-width: 1080px;
+	padding: 0px 10px;
+}
+
+#content-wrapper #contentBtnBox {
+    height: 60px;
+    display: flex;
+    padding: 20px 10px 0 10px;
+    align-items: center;
+    justify-content: space-between;
+    border-top: 3px solid #e6e5e5;
+    width: 100%;
+    max-width: 1080px;
+}
+
+#contentBtnBox .btn-box .btn {
+    width: 76px;
+    height: 38px;    
+    border-radius: 20px;
+    font-weight: bold;
+}
+
+#prebtn {	
+    border: 2px solid #034ea2 !important;
+    color: #034ea2
+}
+
+#nextbtn {	
+    background-color: #034ea2 !important;
+    color: #FFF
+}
+
+
+#content-wrapper .content-item {
+	margin: 10px 0px;
+}
+
+#content_title {
+    font-size: 25px;
+    text-align: center;
+    font-weight: 600;
+	margin-bottom: 30px !important;
+}
+
+.content_button_box {
+	height: 40px;
+	line-height: 40px;
+	text-align: right;
+}
+
+.content_reg_button_box {
+	height: 40px;
+	line-height: 40px;
+	text-align: right;
+	margin-bottom: 50px;
+}
+
+.content_summary_box {
+	font-size: 16px;
+	font-weight: 600;
+	color: #101010;
+}
+
+.content_button_box .btn {
+	width: 80px;
+	min-width: 80px;
+	flex: 0 0 40px;
+	box-shadow: 0 0 12px 0 rgb(0 0 0/ 10%);
+	border-radius: 5px;
+	font-size: 1em;
+	color: #FFF;
+}
+
+.content_selete_box {
+	max-height: 40px;
+	line-height: 40px;
+	text-align: left;
+}
+
+.content_selete_box .form-contractor {
+	display: flex;
 	height: 100%;
+}
+
+.content_selete_box .select-title {
+	border-radius: 5px;
+	font-size: 1em;
+	font-weight: 600;
+	text-align: left;
+	flex: 0 0 50px;
+	min-width: 50px;
+}
+
+.content_selete_box .select-content {
+	max-width: 280px;
+	height: 100% !important;
+	flex: 0 0 100%;
+	border-radius: 5px;
+	font-size: 16px;
+	font-weight: 600;
+	text-align: left;
+}
+
+.content_date_box {
+	display: flex;
+	justify-content: flex-start;
+	flex-direction: row;
+	height: 40px;
+	line-height: 40px;
+	text-align: left;
+}
+
+.content_date_box .title {
+	font-size: 1em;
+	font-weight: 600;
+	text-align: left;
+	flex: 0 0 80px;
+	min-width: 80px;
+}
+
+.content_date_box .hasDatepicker {
+	cursor: pointer;
+	max-width: 250px;
+	height: 100% !important;
+	flex: 0 0 100%;
+	border-radius: 5px;
+	font-size: 16px;
+	font-weight: 600;
+	text-align: center;
+	background: #FFF;
+}
+
+.datepicker {
+	cursor: pointer;
+}
+
+.content_data_count_box {
+	font-size: 1.5em;
+	font-weight: 600;
+}
+
+.bootstrap-table i {
+	font-size: 1.5em;
+}
+
+.modal-content {
+	border: 1px solid black !important;
+}
+
+.fade.in {
+	opacity: 1;
+}
+
+.modal-backdrop {
+	z-index: 0;
+}
+
+table .mobile-wrap {
 	display: flex;
 	justify-content: space-between;
+	align-items: stretch;
+}
+
+table .mobile-item {
+	font-size: 16px;
+	display: flex;
+	padding: 3px;
+	font-weight: 600;
 }
 
 
 @media ( min-width : 576px) {
-	#contentWarp {
-		
+	.content_box {
+		display: flex;
+	    flex-direction: row;
+	    align-items: center;
+	    justify-content: space-around;
 	}
 	
 	.page-wrap {
@@ -158,77 +423,196 @@ body {
 }
 
 @media ( max-width : 575px) {
-	#contentWarp {
-	
+	.content_box {
+	    display: flex;
+	    flex-direction: column;
+	    align-items: center;
+	    flex-wrap: nowrap;
+	    justify-content: flex-start;
 	}
 	.page-wrap {
 		flex-direction: column;
 	}
 }
 
-#_page1 .btn-wrap {
-    flex: 0 0 49%;
-    border: 1px solid #e6e5e5;
+.img-box > img {
+	width: 100%;
+	height: 100%;
+}
+
+#content-wrapper .content-item .btn-wrap {
     display: flex;
+    width: 400px;
+    height: 400px;
+    margin: 5px;
+    border: 2px solid #e6e5e5;
     align-items: center;
-    flex-direction: row;
     justify-content: space-around;
+	cursor: pointer;
 }
 
-
-#_page1 .btn-wrap .img-box{
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-	height: 50%;
+#content-wrapper .content-item .btn-wrap .img-box {
+    width: 300px;
+    height: 300px;
 }
 
-#_page1 .btn-wrap .img-box > img {	
-    min-width: 100px;
-    min-height: 100px;
-    height: 100%;
+#content-wrapper .content_table_box  {
+	display: flex;
+    justify-content: space-around;
+    flex-direction: row;
 }
 
-
-
-#main_frame .button-wrap {
-    height: 10vh;
-    display: flex;
-    padding: 3vh 1vh 0vh 1vh;
-    align-items: center;
-    justify-content: space-between;
-    border-top: 3px solid #e6e5e5;
+#content-wrapper .content_table_box table {
+    width: 100%;
+    border-collapse: collapse;
+    table-layout: fixed;
+    background-color: #fff;
 }
 
-#main_frame .button-wrap .btn-box .btn {
-    width: 76px;
-    height: 38px;    
-    border-radius: 20px;
+#_page_2 table th {
+    color: #034ea2;
+    letter-spacing: -1px;
+    border: 1px solid #b4bfe6;
+	text-align: center;
+}
+
+#_page_2 table td {
+	color: #034ea2;
+	letter-spacing: -1px;
+    border: 1px solid #b4bfe6;
+    text-align: center;
+	padding: 5px;
+}
+
+.agree {
+	position: relative;
+    margin-top: 8px;
+    padding: 10px 0;
+    font-size: 18px;
+    text-align: center;
+    background-color: #efefef;
+}
+
+.agree label {
+    font-size: 16px;
     font-weight: bold;
+    vertical-align: middle;
 }
 
-#prebtn {	
-    border: 2px solid #034ea2;
-    color: #034ea2
+#_page_0 #page1Table th {
+    font-size: 0.9em;
+    min-width: 150px;
+    background: white;
+    color: #666;
+	width: 25%;
 }
 
-#nextbtn {	
-    background-color: #034ea2;
-    color: #FFF
+#_page_0 #page1Table td {
+    height: 40px;
+    font-size: 0.9em;
 }
 
+#_page_0 #page1Table td input {
+    height: 40px;
+    font-size: 0.9em;
+}
 
-/* Frame 2 END */
+#_page_0 #page1Table .img_btn_wrapper {
+    height: 40px;
+    width: 100%;
+    margin-top: 10px;
+}
 
-/*** -------- ***/
-/* FOOTER START */
-/*** ------- ****/
-
-#footer > .gsil-logo-box {
+#_page_0 #page1Table .img_btn_box {
     height: 100%;
+    min-width: 100px;
+    max-width: 120px;
+    flex: 0 0 40px;
+    box-shadow: 0 0 12px 0 rgb(0 0 0 / 10%);
+    border-radius: 5px;
+    font-size: 1em;
+    color: #FFF;
+    float: right;
+    text-align: center;
+    line-height: 40px;
+    margin-left: 5px;
+    padding: 0;
+    position: relative;
+    cursor: pointer;
 }
 
-#footer > .gsil-logo-box > img{
-    height: 100%;
-    max-width: 100px;
+#_page_0 #page1Table .item {
+    height: 40px;
+    max-width: 100% !important;
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    color: #495057;
+    background-color: #dedede;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    font-size: 0.85em;
+    cursor: not-allowed;
+    font-weight: 600;
+}
+
+#_page_0 #page1Table #certkey_box .info-title-box {
+    width: 100%;
+    text-align: left;
+    font-size: 1em;
+    font-weight: 600;
+    border-left: 3px solid #153A6E;
+    height: 20px;
+    line-height: 20px;
+    padding-left: 8px;
+    color: #223540;
+    margin: 10px 0px;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-between;
+    align-items: center;
+    flex-wrap: nowrap;
+}
+
+#_page_0 #page1Table #certkey_box {
+	display: none;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-items: stretch;
+    justify-content: center;
+    align-content: center;
+    margin-top: 10px;
+}
+
+#_page_3 .reg-table th {
+    font-size: 0.9em;
+    min-width: 150px;
+    background: white;
+    color: #666;
+	width: 25%;
+}
+
+#_page_3 .reg-table td input {
+    height: 40px;
+    font-size: 0.9em;
+}
+
+#_page_3 #regTable .item {
+    height: 40px;
+    max-width: 100% !important;
+    display: block;
+    width: 100%;
+    padding: 0.375rem 0.75rem;
+    color: #495057;
+    background-color: #dedede;
+    background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: 0.25rem;
+    transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    font-size: 0.85em;
+    cursor: not-allowed;
+    font-weight: 600;
 }
