--- a/src/main/webapp/css/qr/qr.css
+++ b/src/main/webapp/css/qr/qr.css
@@ -617,7 +617,7 @@ table .mobile-item {
 }
 
 #_page_3 .reg-table th {
-    font-size: 0.9em;
+    font-size: 18px;
     min-width: 150px;
     background: white;
     color: #666;
